force-app/main/default/objects/PowerBiObjConfig__mdt/PowerBiObjConfig__mdt.object-meta.xml
<CustomObject>
    <label>PowerBiObjConfig</label>
    <pluralLabel>PowerBiObjConfig</pluralLabel>
</CustomObject>