force-app/main/default/objects/PowerBiObjConfig__mdt/fields/Default_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Report_Name__c</fullName>
    <label>Default Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>