force-app/main/default/objects/PowerBiObjConfig__mdt/fields/Key_Columns__c.field-meta.xml
<CustomField>
    <fullName>Key_Columns__c</fullName>
    <label>Key Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>