force-app/main/default/objects/PowerBiObjConfig__mdt/fields/WorkspaceName__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceName__c</fullName>
    <label>Default Workspace Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>